<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/default_margin"
        android:background="@color/gray">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textStyle="bold"
            android:textSize="36sp"
            android:layout_marginBottom="@dimen/default_margin"
            android:textAlignment="center"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="@dimen/default_margin"
            app:cardCornerRadius="@dimen/default_corner_radius"
            app:cardElevation="6dp"
            app:cardBackgroundColor="@color/dark_gray">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_marginHorizontal="@dimen/default_margin"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:text="@string/eng"/>

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_arrows"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_marginHorizontal="@dimen/default_margin"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:text="@string/rus"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/purple"/>

                <EditText
                    android:id="@+id/titleText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:hint="@string/enter_query" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@string/translate" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginBottom="@dimen/default_margin"
            app:cardCornerRadius="@dimen/small_corner_radius"
            app:cardElevation="6dp"
            app:cardBackgroundColor="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin"
                android:visibility="visible"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:hint="@string/translation" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_bookmark_outlined"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/query_history"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/history_placeholder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                android:layout_marginTop="@dimen/small_margin"
                app:cardCornerRadius="@dimen/default_corner_radius"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/light_purple">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/empty_history"/>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/recycler_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="@dimen/small_margin"
                    tools:listitem="@layout/item_history"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_history"/>

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        app:itemRippleColor="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/menu_bottom_nav"
        android:layout_gravity="bottom"/>

</LinearLayout>