<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="6dp"
    app:cardCornerRadius="@dimen/small_corner_radius"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/dark_gray"
        android:paddingStart="@dimen/default_margin"
        android:paddingEnd="8dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/recycler_history_original_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:layout_marginEnd="@dimen/micro_margin"
                android:text="@string/word"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:layout_marginEnd="@dimen/micro_margin"
                android:text="@string/arrow"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/recycler_history_translated_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:layout_marginEnd="@dimen/micro_margin"
                android:text="@string/translation"
                android:textStyle="bold"/>

        </LinearLayout>


        <ImageView
            android:id="@+id/translation_to_favorites_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_margin"
            android:layout_gravity="center"
            android:src="@drawable/ic_bookmark_outlined"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>
